# bazel-workshop

./: BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  WORKSPACE.bazel  calculator.go  calculator_test.go  go.mod
